--- a/app/src/main/res/layout/activity_historial_ubicacion.xml
+++ b/app/src/main/res/layout/activity_historial_ubicacion.xml
@@ -7,20 +7,15 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:text="Historial de"
-        android:textSize="20sp"
+        android:text="Historial de Ubicación"
+        android:textSize="24sp"
         android:textStyle="bold"
         android:textColor="#000000"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-
-    <TextView
-        android:text="Ubicacion"
-        android:textSize="28sp"
-        android:textStyle="bold"
-        android:textColor="#000000"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:fontFamily="@font/titulos"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:layout_marginBottom="12dp" />
 
     <ImageView
         android:id="@+id/imageUbicacion"
@@ -28,12 +23,36 @@
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:scaleType="fitCenter"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"/>
+        android:layout_marginBottom="12dp" />
 
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+
+        android:background="#DFFFD6">
+
+        <TextView
+            android:text="Dirección"
+            android:textStyle="bold"
+            android:textSize="24sp"
+            android:background="#DFFFD6"
+            android:gravity="center"
+            android:layout_weight="1"
+            android:fontFamily="@font/titulos"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content" />
+
+    </LinearLayout>
+
+    <!-- Lista del historial -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerUbicaciones"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"/>
+        android:layout_weight="1"
+        android:fontFamily="@font/titulos"
+        android:divider="@android:color/darker_gray"
+        android:dividerHeight="1dp"/>
 </LinearLayout>
+
