--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -35,6 +35,7 @@
                 android:textSize="30sp"
                 android:gravity="center"
                 tools:ignore="HardcodedText" />
+
         </FrameLayout>
 
         <RelativeLayout
@@ -291,6 +292,37 @@
                 android:layout_width="56dp"
                 android:layout_height="56dp"
                 android:src="@drawable/jeringa"
+                android:layout_alignParentEnd="true"
+                android:layout_marginEnd="24dp"
+                android:layout_centerVertical="true"/>
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/btnlogout"
+            android:layout_width="match_parent"
+            android:layout_height="90dp"
+            android:background="@drawable/rounded_button_red"
+            android:layout_marginBottom="16dp"
+            android:layout_marginLeft="40dp"
+            android:layout_marginRight="40dp"
+            android:clipToOutline="true">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/titulos"
+                android:text="Cerrar Sesión"
+                android:textSize="24sp"
+                android:textColor="@android:color/black"
+                android:layout_centerVertical="true"
+                android:layout_marginStart="24dp"
+                android:layout_marginEnd="16dp"/>
+
+            <ImageView
+                android:id="@+id/logout"
+                android:layout_width="56dp"
+                android:layout_height="56dp"
+                android:src="@drawable/logout"
                 android:layout_alignParentEnd="true"
                 android:layout_marginEnd="24dp"
                 android:layout_centerVertical="true"/>
