--- a/app/src/main/res/layout/activity_register_paso3.xml
+++ b/app/src/main/res/layout/activity_register_paso3.xml
@@ -1,156 +1,171 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="#FFFFFF"
-    android:padding="20dp">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-    <LinearLayout
+    <ImageView
+        android:id="@+id/backgroundImage"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:gravity="center_horizontal">
+        android:layout_height="match_parent"
+        android:scaleType="centerCrop"
+        android:src="@drawable/register"
+        android:alpha="0.2"/>
 
-        <TextView
-            android:text="Cuentanos sobre tu"
-            android:fontFamily="@font/titulos"
-            android:textColor="#000000"
-            android:textSize="35sp"
-            android:layout_marginTop="24dp"
-            android:layout_gravity="left"
-            tools:ignore="HardcodedText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@android:color/transparent"
+        android:padding="20dp">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Mascota"
-            android:fontFamily="@font/titulos"
-            android:layout_gravity="left"
-            android:textColor="#222222"
-            android:textSize="50sp"
-            android:layout_marginTop="-40dp"
-            tools:ignore="HardcodedText" />
-
-        <com.google.android.material.imageview.ShapeableImageView
-            android:id="@+id/home_img"
-            android:layout_width="300dp"
-            android:layout_height="150dp"
-            android:scaleType="centerCrop"
-            android:src="@drawable/add_pet"
-            app:shapeAppearanceOverlay="@style/RoundedImageViewStyle" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Cual es su nombre"
-            android:layout_gravity="left"
-            android:textColor="#000000"
-            android:textSize="25sp"
-            android:fontFamily="@font/titulos"
-            android:layout_marginBottom="4dp"
-            tools:ignore="HardcodedText"   />
-
-        <EditText
-            android:id="@+id/etNombreMascota"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_marginBottom="16dp"
-            android:background="@drawable/rounded_edittext"
-            android:drawableEnd="@drawable/ic_arrow_dropdown"
-            android:fontFamily="@font/titulos"
-            android:hint="Milo, Max, Princesa"
-            android:paddingHorizontal="16dp"
-            android:textColor="#000000"
-            android:textColorHint="@color/grayHint"
-            tools:ignore="HardcodedText" />
-
-        <TextView
-            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Cual es su especie"
-            android:layout_gravity="left"
-            android:textColor="#000000"
-            android:textSize="25sp"
-            android:fontFamily="@font/titulos"
-            android:layout_marginBottom="4dp"
-            tools:ignore="HardcodedText"   />
+            android:orientation="vertical"
+            android:gravity="center_horizontal">
 
-        <EditText
-            android:id="@+id/etEspecie"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:background="@drawable/rounded_edittext"
-            android:hint="Perro, gato"
-            android:fontFamily="@font/titulos"
-            android:drawableEnd="@drawable/ic_arrow_dropdown"
-            android:paddingHorizontal="16dp"
-            android:layout_marginBottom="16dp"
-            android:textColorHint="@color/grayHint"
-            android:textColor="#000000"
-            tools:ignore="HardcodedText" />
+            <TextView
+                android:text="Cuentanos sobre tu"
+                android:fontFamily="@font/titulos"
+                android:textColor="#000000"
+                android:textSize="35sp"
+                android:layout_marginTop="24dp"
+                android:layout_gravity="left"
+                tools:ignore="HardcodedText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Cual es su raza"
-            android:layout_gravity="left"
-            android:textColor="#000000"
-            android:textSize="25sp"
-            android:fontFamily="@font/titulos"
-            android:layout_marginBottom="4dp"
-            tools:ignore="HardcodedText"   />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Mascota"
+                android:fontFamily="@font/titulos"
+                android:layout_gravity="left"
+                android:textColor="#222222"
+                android:textSize="50sp"
+                android:layout_marginTop="-40dp"
+                tools:ignore="HardcodedText" />
 
-        <EditText
-            android:id="@+id/etRaza"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:background="@drawable/rounded_edittext"
-            android:hint="Samoyedo, Husky"
-            android:fontFamily="@font/titulos"
-            android:drawableEnd="@drawable/ic_arrow_dropdown"
-            android:paddingHorizontal="16dp"
-            android:layout_marginBottom="16dp"
-            android:textColorHint="@color/grayHint"
-            android:textColor="#000000"
-            tools:ignore="HardcodedText" />
+            <com.google.android.material.imageview.ShapeableImageView
+                android:id="@+id/home_img"
+                android:layout_width="300dp"
+                android:layout_height="150dp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/add_pet"
+                app:shapeAppearanceOverlay="@style/RoundedImageViewStyle" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Cual es su peso"
-            android:layout_gravity="left"
-            android:textColor="#000000"
-            android:textSize="25sp"
-            android:fontFamily="@font/titulos"
-            android:layout_marginBottom="4dp"
-            tools:ignore="HardcodedText"   />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Cual es su nombre"
+                android:layout_gravity="left"
+                android:textColor="#000000"
+                android:textSize="25sp"
+                android:fontFamily="@font/titulos"
+                android:layout_marginBottom="4dp"
+                tools:ignore="HardcodedText" />
 
-        <EditText
-            android:id="@+id/etPeso"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:background="@drawable/rounded_edittext"
-            android:hint="30 kg"
-            android:fontFamily="@font/titulos"
-            android:drawableEnd="@drawable/ic_arrow_dropdown"
-            android:paddingHorizontal="16dp"
-            android:layout_marginBottom="16dp"
-            android:textColorHint="@color/grayHint"
-            android:textColor="#000000"
-            tools:ignore="HardcodedText" />
-        <Button
-            android:id="@+id/btnGuardarMascota"
-            android:layout_width="320dp"
-            android:layout_height="80dp"
-            android:text="Seguir"
-            android:fontFamily="@font/titulos"
-            android:textSize="30sp"
-            android:backgroundTint="@color/greenButton"
-            android:layout_marginTop="20dp"
-            tools:ignore="HardcodedText" />
-    </LinearLayout>
-</ScrollView>
+            <EditText
+                android:id="@+id/etNombreMascota"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginBottom="16dp"
+                android:background="@drawable/rounded_edittext"
+                android:drawableEnd="@drawable/ic_arrow_dropdown"
+                android:fontFamily="@font/titulos"
+                android:hint="Milo, Max, Princesa"
+                android:paddingHorizontal="16dp"
+                android:textColor="#000000"
+                android:textColorHint="@color/grayHint"
+                tools:ignore="HardcodedText" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Cual es su especie"
+                android:layout_gravity="left"
+                android:textColor="#000000"
+                android:textSize="25sp"
+                android:fontFamily="@font/titulos"
+                android:layout_marginBottom="4dp"
+                tools:ignore="HardcodedText" />
+
+            <EditText
+                android:id="@+id/etEspecie"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:background="@drawable/rounded_edittext"
+                android:hint="Perro, gato"
+                android:fontFamily="@font/titulos"
+                android:drawableEnd="@drawable/ic_arrow_dropdown"
+                android:paddingHorizontal="16dp"
+                android:layout_marginBottom="16dp"
+                android:textColorHint="@color/grayHint"
+                android:textColor="#000000"
+                tools:ignore="HardcodedText" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Cual es su raza"
+                android:layout_gravity="left"
+                android:textColor="#000000"
+                android:textSize="25sp"
+                android:fontFamily="@font/titulos"
+                android:layout_marginBottom="4dp"
+                tools:ignore="HardcodedText" />
+
+            <EditText
+                android:id="@+id/etRaza"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:background="@drawable/rounded_edittext"
+                android:hint="Samoyedo, Husky"
+                android:fontFamily="@font/titulos"
+                android:drawableEnd="@drawable/ic_arrow_dropdown"
+                android:paddingHorizontal="16dp"
+                android:layout_marginBottom="16dp"
+                android:textColorHint="@color/grayHint"
+                android:textColor="#000000"
+                tools:ignore="HardcodedText" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Cual es su peso"
+                android:layout_gravity="left"
+                android:textColor="#000000"
+                android:textSize="25sp"
+                android:fontFamily="@font/titulos"
+                android:layout_marginBottom="4dp"
+                tools:ignore="HardcodedText" />
+
+            <EditText
+                android:id="@+id/etPeso"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:background="@drawable/rounded_edittext"
+                android:hint="30 kg"
+                android:fontFamily="@font/titulos"
+                android:drawableEnd="@drawable/ic_arrow_dropdown"
+                android:paddingHorizontal="16dp"
+                android:layout_marginBottom="16dp"
+                android:textColorHint="@color/grayHint"
+                android:textColor="#000000"
+                tools:ignore="HardcodedText" />
+
+            <Button
+                android:id="@+id/btnGuardarMascota"
+                android:layout_width="320dp"
+                android:layout_height="80dp"
+                android:text="Seguir"
+                android:fontFamily="@font/titulos"
+                android:textSize="30sp"
+                android:backgroundTint="@color/greenButton"
+                android:layout_marginTop="20dp"
+                tools:ignore="HardcodedText" />
+        </LinearLayout>
+    </ScrollView>
+</FrameLayout>
+
