--- a/app/src/main/res/layout/activity_registrar_vacuna.xml
+++ b/app/src/main/res/layout/activity_registrar_vacuna.xml
@@ -47,7 +47,7 @@
                 android:layout_width="150dp"
                 android:layout_height="200dp"
                 android:scaleType="centerCrop"
-                android:src="@drawable/gato"
+                android:src="@drawable/perro"
                 android:layout_marginBottom="16dp"
                 android:layout_marginTop="-30dp" />
 
